--- a/templates/wheel.html
+++ b/templates/wheel.html
@@ -57,4 +57,16 @@
         });
     </script>
 </body>
+<head>
+    <title>Chore Wheel</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+</head>
+<body>
+    <h1>Chore Wheel</h1>
+    <div id="wheel"></div>
+    <button id="spin-button">Spin the Wheel</button>
+    <div id="result"></div>
+
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+</body>
 </html>
